Fixed text overflow for Title component

--- a/src/scss/grommet-core/_objects.title.scss
+++ b/src/scss/grommet-core/_objects.title.scss
@@ -6,7 +6,6 @@
   text-overflow: ellipsis;
   font-weight: normal;
   white-space: nowrap;
-  display: block;
   @include inuit-font-size(24px, inherit);
 
   @include media-query(lap-and-up) {
